# compiler-pbl-4devs-6sem

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  ams_install_linux.sh
.github/ISSUE_TEMPLATE/: config.yml  task.md
docs/: PROJECT_STRUCTURE.md
examples/: arrays_test.ams  hello_world.ams  import_test.ams  scheduling_test.ams  stdlib_test.ams  type_error_test.ams
examples/stdlib/: math_utils.ams
grammar/: AMS.g4
include/ams/compiler/: Generator.hpp
include/core/analysis/: SemanticAnalyzer.hpp  SymbolTable.hpp
include/core/builder/: AST.hpp  Builder.hpp  builder.hpp
include/core/compiler/: Generator.hpp
include/core/interpreter/: Evaluator.hpp
include/core/supports/: caseCaptilizeInputStream.hpp
include/stdlib/: collections.hpp  file.hpp  math.hpp  string.hpp  structs.hpp
include/stdlib/io/: console.hpp
src/compiler/: CodeGen.cpp
src/core/analysis/: SemanticAnalyzer.cpp  SymbolTable.cpp
src/driver/: main.cpp
